--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,15 @@ body {
   width: 100%;
 }
 
+.banner-operatorio {
+  background-image: url(assets/img/bradcam2.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  height: 60vh;
+  width: 100%;
+}
+
 .whatsapp button {
   border: none;
   outline: none;
@@ -559,6 +568,75 @@ body {
   fill: #ffffff !important;
 }
 
-p {
-  color: #6b6a6a !important;
+.card-video {
+  position: relative;
+  width: 350px !important;
+  height: 350px;
+  color: #2e2d31;
+
+  overflow: hidden;
+  border-radius: 20px 20px 20px 20px;
+}
+
+.card-video iframe {
+  width: 100%;
+  height: 180px;
+  border-radius: 20px 20px 20px 0;
+}
+
+.card_title {
+  font-weight: bold;
+}
+
+.card_content {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  /* edit the width to fit card */
+  width: 100%;
+  height: 170px;
+  padding: 20px;
+  background: #f2f2f2;
+  border-top-left-radius: 0px;
+  /* edit here to change the height of the content box */
+  transform: translateY(0px);
+  transition: transform 0.25s;
+}
+
+.card_content::before {
+  content: "";
+  position: absolute;
+  top: -48px;
+  right: -45px;
+  width: 100px;
+  height: 100px;
+  transform: rotate(-175deg);
+  border-radius: 50%;
+  box-shadow: inset 48px 48px #001d71;
+}
+
+.card_title {
+  color: #131313;
+  line-height: 15px;
+}
+
+.card_subtitle {
+  display: block;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.card_description {
+  font-size: 14px;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.card-video:hover .card_content {
+  transform: translateY(0);
+}
+
+.card-video:hover .card_description {
+  opacity: 1;
+  transition-delay: 0.25s;
 }
