--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,13 @@ body {
   align-items: center;
 }
 
+@media (max-width: 760px) {
+  .button-wpp {
+    width: 40px;
+    height: 40px;
+  }
+}
+
 .button-wpp button {
   border: none;
   outline: none;
