--- a/src/index.css
+++ b/src/index.css
@@ -280,6 +280,12 @@ body {
   border-radius: 5px;
 }
 
+@media (max-width: 1024px) {
+  .card img {
+    margin-top: 50px !important;
+  }
+}
+
 .card-departamento {
   width: 250px;
   height: 354px;
@@ -610,6 +616,7 @@ body {
 
 .card_title {
   font-weight: bold;
+  line-height: 24px !important;
 }
 
 .card_content {
@@ -619,7 +626,7 @@ body {
   /* edit the width to fit card */
   width: 100%;
   height: 170px;
-  padding: 20px;
+  padding: 10px;
   background: #f2f2f2;
   border-top-left-radius: 0px;
   /* edit here to change the height of the content box */
