--- a/src/index.css
+++ b/src/index.css
@@ -621,9 +621,7 @@ body {
 .card-video {
   position: relative;
   width: 350px !important;
-  height: 350px;
   color: #2e2d31;
-
   overflow: hidden;
   border-radius: 20px 20px 20px 20px;
 }
@@ -640,12 +638,12 @@ body {
 }
 
 .card_content {
-  position: absolute;
+  /*   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 0; */
   /* edit the width to fit card */
+
   width: 100%;
-  height: 170px;
   padding: 10px;
   background: #f2f2f2;
   border-top-left-radius: 0px;
